objects/Customer_Interest__c.object
<CustomObject>
    <description>Fleece Me customer interest</description>
    <fields>
        <fullName>Event_Date__c</fullName>
        <description>Date where rep took the client to the interest</description>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interest_Notes__c</fullName>
        <label>Interest Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Interest_Type__c</fullName>
        <label>Interest Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dining</fullName>
                </value>
                <value>
                    <fullName>Sports Events</fullName>
                </value>
                <value>
                    <fullName>SWAG</fullName>
                </value>
                <value>
                    <fullName>Concert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>My_RT__c</fullName>
        <label>My RT</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Quantity_Reserved__c</fullName>
        <label>Quantity Reserved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Quantity__c</fullName>
        <label>Remaining Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <description>Cost to take the customer to event</description>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Customer Interest</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Interest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Interest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>